--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -125,21 +125,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:07:16.570985Z",
-     "start_time": "2019-03-21T01:07:16.565999Z"
+     "end_time": "2019-03-21T01:08:07.778803Z",
+     "start_time": "2019-03-21T01:08:07.773843Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(21, 10, True)"
+       "(20, 6, False)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,21 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:05:41.988722Z",
-     "start_time": "2019-03-21T01:05:41.984262Z"
+     "end_time": "2019-03-21T01:08:09.867463Z",
+     "start_time": "2019-03-21T01:08:09.862505Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((58, 10, False), -1, True, {})"
+       "((27, 6, False), -1, True, {})"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
