--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -83,8 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:12:00.065481Z",
+     "start_time": "2019-03-21T01:12:00.061011Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def sample_policy(observation):\n",
@@ -119,28 +124,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:11:08.202667Z",
-     "start_time": "2019-03-21T01:11:08.198670Z"
+     "end_time": "2019-03-21T01:12:48.500432Z",
+     "start_time": "2019-03-21T01:12:48.489012Z"
     }
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n"
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-36-c8babd7f6cfe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0maction_to_take\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msample_policy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction_to_take\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 3)"
      ]
     }
    ],
    "source": [
     "returns_sum   = defaultdict(float)\n",
     "returns_count = defaultdict(float)\n",
+    "V = defaultdict(float)\n",
     "player,dealer,game_over = env.reset()\n",
+    "action_to_take = sample_policy((player,dealer,game_over))\n",
+    "player,dealer,game_over = env.step(action_to_take)\n",
     "\n",
-    "print(player)"
+    "print(player)\n",
+    "print(action_to_take)"
    ]
   },
   {
@@ -170,21 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:08:09.867463Z",
-     "start_time": "2019-03-21T01:08:09.862505Z"
+     "end_time": "2019-03-21T01:13:13.064945Z",
+     "start_time": "2019-03-21T01:13:13.060489Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((27, 6, False), -1, True, {})"
+       "((46, 5, False), -1, True, {})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
