--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -124,23 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:12:48.500432Z",
-     "start_time": "2019-03-21T01:12:48.489012Z"
+     "end_time": "2019-03-21T01:14:29.215468Z",
+     "start_time": "2019-03-21T01:14:29.208565Z"
     }
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-36-c8babd7f6cfe>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0maction_to_take\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msample_policy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mplayer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdealer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mgame_over\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maction_to_take\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mplayer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 3)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "0\n"
      ]
     }
    ],
@@ -148,9 +145,14 @@
     "returns_sum   = defaultdict(float)\n",
     "returns_count = defaultdict(float)\n",
     "V = defaultdict(float)\n",
-    "player,dealer,game_over = env.reset()\n",
+    "\n",
+    "player,dealer,usable_ace = env.reset()\n",
+    "\n",
+    "if player in returns_count:\n",
+    "    returns_count[player] = \n",
+    "\n",
     "action_to_take = sample_policy((player,dealer,game_over))\n",
-    "player,dealer,game_over = env.step(action_to_take)\n",
+    "observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
     "print(player)\n",
     "print(action_to_take)"
@@ -183,21 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:13:13.064945Z",
-     "start_time": "2019-03-21T01:13:13.060489Z"
+     "end_time": "2019-03-21T01:14:15.906149Z",
+     "start_time": "2019-03-21T01:14:15.901173Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((46, 5, False), -1, True, {})"
+       "((117, 5, False), -1, True, {})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
