--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -76,7 +76,28 @@
     "    V = defaultdict(float)\n",
     "    player,dealer,game_over = env.rest()\n",
     "    \n",
-    "    \n",
+    "    for _ in range(num_episodes):\n",
+    "        observation = env.reset()\n",
+    "\n",
+    "        if observation[0] in returns_count:\n",
+    "            returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
+    "        else:\n",
+    "            returns_count[observation[0]] = 1\n",
+    "\n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "        while not game_over: \n",
+    "            action_to_take = sample_policy(observation)\n",
+    "            observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "        if observation[0] in returns_count:\n",
+    "            returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
+    "        else:\n",
+    "            returns_count[observation[0]] = reward\n",
+    "\n",
+    "    for x in returns_sum:\n",
+    "        V[x] = returns_sum[x]/\n",
     "\n",
     "    return V    "
    ]
@@ -124,11 +145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:14:29.215468Z",
-     "start_time": "2019-03-21T01:14:29.208565Z"
+     "end_time": "2019-03-21T01:18:21.825637Z",
+     "start_time": "2019-03-21T01:18:21.819190Z"
     }
    },
    "outputs": [
@@ -136,8 +157,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21\n",
-      "0\n"
+      "16\n",
+      "1\n"
      ]
     }
    ],
@@ -146,24 +167,24 @@
     "returns_count = defaultdict(float)\n",
     "V = defaultdict(float)\n",
     "\n",
-    "player,dealer,usable_ace = env.reset()\n",
+    "observation = env.reset()\n",
     "\n",
-    "if player in returns_count:\n",
-    "    returns_count[player] = returns_count[player] + 1\n",
+    "if observation[0] in returns_count:\n",
+    "    returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
     "else:\n",
-    "    returns_count[player] = 1\n",
+    "    returns_count[observation[0]] = 1\n",
     "    \n",
-    "action_to_take = sample_policy((player,dealer,game_over))\n",
-    "player,dealer,usable_ace,reward,game_over,_ = env.step(action_to_take)\n",
+    "action_to_take = sample_policy(observation)\n",
+    "observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
     "while not game_over: \n",
-    "    action_to_take = sample_policy((player,dealer,game_over))\n",
-    "    player,dealer,usable_ace,reward,game_over,_ = env.step(action_to_take)\n",
+    "    action_to_take = sample_policy(observation)\n",
+    "    observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
-    "if player in returns_count:\n",
-    "    returns_count[player] = returns_count[player] + 1\n",
+    "if observation[0] in returns_count:\n",
+    "    returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
     "else:\n",
-    "    returns_count[player] = 1\n",
+    "    returns_count[observation[0]] = reward\n",
     "    \n",
     "print(player)\n",
     "print(action_to_take)"
