--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,8 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 62,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:19:41.956517Z",
+     "start_time": "2019-03-21T01:19:41.946574Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def mc_prediction(policy, env, num_episodes, discount_factor=1.0):\n",
@@ -74,7 +79,7 @@
     "    \n",
     "    # The final value function\n",
     "    V = defaultdict(float)\n",
-    "    player,dealer,game_over = env.rest()\n",
+    "    player,dealer,game_over = env.reset()\n",
     "    \n",
     "    for _ in range(num_episodes):\n",
     "        observation = env.reset()\n",
@@ -97,18 +102,18 @@
     "            returns_count[observation[0]] = reward\n",
     "\n",
     "    for x in returns_sum:\n",
-    "        V[x] = returns_sum[x]/\n",
+    "        V[x] = returns_sum[x]/returns_count[x]\n",
     "\n",
     "    return V    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:12:00.065481Z",
-     "start_time": "2019-03-21T01:12:00.061011Z"
+     "end_time": "2019-03-21T01:19:42.233089Z",
+     "start_time": "2019-03-21T01:19:42.230031Z"
     }
    },
    "outputs": [],
@@ -123,11 +128,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:19:43.074005Z",
+     "start_time": "2019-03-21T01:19:42.642981Z"
+    },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "min() arg is an empty sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-64-a8dbe4389e5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mV_10k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_10k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"10,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mV_500k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_500k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"500,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Desktop\\Daily-Neural-Network-Practice-3\\reinforcement learning\\reference\\lib\\plotting.py\u001b[0m in \u001b[0;36mplot_value_function\u001b[1;34m(V, title)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mPlots\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0mfunction\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0ma\u001b[0m \u001b[0msurface\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \"\"\"\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mmin_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m     \u001b[0mmax_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mmin_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+     ]
+    }
+   ],
    "source": [
     "V_10k = mc_prediction(sample_policy, env, num_episodes=10000)\n",
     "plotting.plot_value_function(V_10k, title=\"10,000 Steps\")\n",
@@ -145,11 +167,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:18:21.825637Z",
-     "start_time": "2019-03-21T01:18:21.819190Z"
+     "end_time": "2019-03-21T01:21:05.422361Z",
+     "start_time": "2019-03-21T01:21:05.412926Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "returns_sum   = defaultdict(float)\n",
+    "returns_count = defaultdict(float)\n",
+    "\n",
+    "# The final value function\n",
+    "V = defaultdict(float)\n",
+    "player,dealer,game_over = env.reset()\n",
+    "\n",
+    "for _ in range(10):\n",
+    "    observation = env.reset()\n",
+    "\n",
+    "    if observation[0] in returns_count:\n",
+    "        returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
+    "    else:\n",
+    "        returns_count[observation[0]] = 1\n",
+    "\n",
+    "    action_to_take = sample_policy(observation)\n",
+    "    observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "    while not game_over: \n",
+    "        action_to_take = sample_policy(observation)\n",
+    "        observation,reward,game_over,_ = env.step(action_to_take)\n",
+    "\n",
+    "    if observation[0] in returns_count:\n",
+    "        returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
+    "    else:\n",
+    "        returns_count[observation[0]] = reward\n",
+    "\n",
+    "for x in returns_sum.keys():\n",
+    "    V[x] = returns_sum[x]/returns_count[x]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:21:15.585687Z",
+     "start_time": "2019-03-21T01:21:15.580232Z"
     }
    },
    "outputs": [
@@ -157,63 +221,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "14\n",
+      "24\n",
       "16\n",
-      "1\n"
+      "22\n",
+      "15\n",
+      "20\n",
+      "21\n",
+      "25\n",
+      "18\n",
+      "26\n",
+      "----------------\n"
      ]
     }
    ],
    "source": [
-    "returns_sum   = defaultdict(float)\n",
-    "returns_count = defaultdict(float)\n",
-    "V = defaultdict(float)\n",
-    "\n",
-    "observation = env.reset()\n",
-    "\n",
-    "if observation[0] in returns_count:\n",
-    "    returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
-    "else:\n",
-    "    returns_count[observation[0]] = 1\n",
-    "    \n",
-    "action_to_take = sample_policy(observation)\n",
-    "observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "\n",
-    "while not game_over: \n",
-    "    action_to_take = sample_policy(observation)\n",
-    "    observation,reward,game_over,_ = env.step(action_to_take)\n",
-    "\n",
-    "if observation[0] in returns_count:\n",
-    "    returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
-    "else:\n",
-    "    returns_count[observation[0]] = reward\n",
-    "    \n",
-    "print(player)\n",
-    "print(action_to_take)"
+    "for x in returns_count.keys():\n",
+    "    print(x)\n",
+    "print('----------------')\n",
+    "for x in V.keys():\n",
+    "    print(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-03-21T01:08:07.778803Z",
-     "start_time": "2019-03-21T01:08:07.773843Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 6, False)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "env.reset()"
-   ]
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
